--- a/sass/2_generic/_typography.scss
+++ b/sass/2_generic/_typography.scss
@@ -1,6 +1,6 @@
 html {
 	color: $chicago;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 17px;
 	font-weight: 300;
 }
